--- a/language/en-GB/en-GB.plg_system_foxycarthmacvalidation.ini
+++ b/language/en-GB/en-GB.plg_system_foxycarthmacvalidation.ini
@@ -1,7 +1,7 @@
 PLG_SYSTEM_FOXYCARTHMACVALIDATION="System - Foxycart HMAC Validation"
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_XML_DESCRIPTION="A system plugin to apply HMAC validation to FoxyCart links in Joomla 3+"
 
-PLG_SYSTEM_FOXYCARTHMACVALIDATION_DEBUG_LABEL="Enabled Debug?"
+PLG_SYSTEM_FOXYCARTHMACVALIDATION_DEBUG_LABEL="Enable Debug?"
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_DEBUG_DESC="Specify whether debugging should be enabled"
 
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_CARTURL_LABEL="Cart URL"
