--- a/language/en-GB/en-GB.plg_system_foxycarthmacvalidation.ini
+++ b/language/en-GB/en-GB.plg_system_foxycarthmacvalidation.ini
@@ -5,7 +5,7 @@ PLG_SYSTEM_FOXYCARTHMACVALIDATION_DEBUG_LABEL="Enable Debug?"
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_DEBUG_DESC="Specify whether debugging should be enabled"
 
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_CARTURL_LABEL="Cart URL"
-PLG_SYSTEM_FOXYCARTHMACVALIDATION_CARTURL_DESC="The URL for your cart (e.g. 'https://yoursite.foxycart.com')"
+PLG_SYSTEM_FOXYCARTHMACVALIDATION_CARTURL_DESC="The URL for your cart (e.g. 'https://yoursite.foxycart.com/cart')"
 
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_SECRET_LABEL="Foxycart Secret"
 PLG_SYSTEM_FOXYCARTHMACVALIDATION_SECRET_DESC="Your site secret (typically your Foxycart API key)"
